<resources>
    <string name="app_name" translatable="false">Mobile Based Queueing System</string>
    <string name="action_deletQueue" translatable="false">Delete Queue</string>
    <string name="action_SignOut" translatable="false">Sign out</string>
    <string name="action_LeaveQueue" translatable="false">Leave Queue</string>
    <string name="welcome" translatable="false">Welcome, </string>
    <string name="action_AboutUs" translatable="false">About Us</string>
    <string name="login_using_gmail" translatable="false">Login Using Email/Gmail</string>
    <string name="host" translatable="false">Host</string>
    <string name="join" translatable="false">Join</string>
    <string name="enter_queue_name" translatable="false">Enter Queue Name</string>
    <string name="enter_queue_description" translatable="false">Enter Queue Description</string>
    <string name="set_max_queue_limit" translatable="false">Set Max Queue Limit</string>
    <string name="host_queue" translatable="false">Host Queue</string>
    <string name="queue_name" translatable="false">Queue Name</string>
    <string name="_00000" translatable="false">00000</string>
    <string name="current" translatable="false">Current</string>
    <string name="max" translatable="false">Max</string>
    <string name="_0" translatable="false">0</string>
    <string name="estimated_waiting_time" translatable="false">Estimated Waiting Time</string>
    <string name="no_estimated_time_avaialable" translatable="false">No Estimated Time Avaialable</string>
    <string name="scan_queues_near_me" translatable="false">Scan Queues Near Me</string>
    <string name="scan" translatable="false">Scan</string>
    <string name="current_token" translatable="false">Current Token</string>
    <string name="next" translatable="false">Next</string>
    <string name="client_details" translatable="false">Client Details</string>
    <string name="client_name" translatable="false">Client Name</string>
    <string name="client_email_com" translatable="false">client@email.com</string>
    <string name="share_this_qr_code_with_clients" translatable="false">Share this QR Code With Clients</string>
    <string name="enable_clients_to_join_via_bluetooth" translatable="false">Enable Clients To Join Via Bluetooth</string>
</resources>