<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fui_bgFacebook"
    tools:context=".join.JoiningActivity">

    <include
        android:id="@+id/toolbar_join"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_qname_new"
        android:text="@string/queue_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_join"
        android:layout_marginTop="24dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_qdescription_new"
        android:hint="@string/host_queue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_qname_new"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_mytoken_new"
        android:text="@string/_00000"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_qdescription_new"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/roundedbg"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView6"
        android:text="@string/current"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_mytoken_new"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        android:textAlignment="center" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="206dp"
        app:layout_constraintGuide_percent="0.5"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:text="@string/max"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_mytoken_new"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_current_new"
        android:text="@string/_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundedbg"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.46" />

    <TextView
        android:id="@+id/tv_max_new"
        android:text="@string/_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:background="@drawable/roundedbg"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="32dp"
        app:layout_constraintHorizontal_bias="0.66" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/estimated_waiting_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_new"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_waittime"
        android:text="@string/no_estimated_time_avaialable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbg"
        android:padding="10dp"
        app:layout_constraintHorizontal_bias="0.43"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@mipmap/queue"
        app:layout_constraintTop_toBottomOf="@+id/tv_waittime"/>

</androidx.constraintlayout.widget.ConstraintLayout>
