<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fui_bgFacebook"
    tools:context="com.project.mbqs.MainActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar"
        />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/login_using_gmail"
        android:padding="@dimen/default_padding"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/b_host"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:text="@string/host" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/b_join"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:text="@string/join" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:background="@mipmap/queue_bg" />

</LinearLayout>
